--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,3 +237,43 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+@media screen and (max-width: 960px) {
+    #main-container {
+      margin-right: 0;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    #main-container {
+      width: 100%;
+      margin-left: 45px
+    }
+
+    /*I know there has GOT to be a better way to center this side at the beginning of the page that a float with a margin*/
+    .sidebar {
+      float: left;
+      margin-left: 190px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #main-container {
+      width: 100%;
+    }
+    .main-section {
+      max-width: 520px;
+    }
+    .sidebar {
+      margin-left: 125px;
+    }
+    .work {
+      margin-left: 95px;
+    }
+    #masthead {
+      position: static;
+    }
+
+}
